--- a/src/GIMI-ModManager.WinUI/Views/Controls/EditableTextBlock.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/Controls/EditableTextBlock.xaml
@@ -27,6 +27,7 @@
             x:Name="TextBox"
             CornerRadius="4"
             KeyDown="TextBox_OnKeyDown"
+            SelectionStart="{x:Bind TextSelectionStart, Mode=OneWay}"
             Text="{x:Bind Text, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             TextAlignment="{x:Bind TextAlignment, Mode=OneWay}"
             Visibility="Collapsed" />
