--- a/src/GIMI-ModManager.WinUI/Views/SettingsPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/SettingsPage.xaml
@@ -167,8 +167,37 @@
                         Content="Start Elevator Process..." />
                 </StackPanel>
 
+                <TextBlock Style="{ThemeResource SubtitleTextBlockStyle}" Text="Mod Update Checker" />
+                <StackPanel Margin="{StaticResource SmallTopBottomMargin}">
+                    <StackPanel Orientation="Horizontal">
+                        <CheckBox
+                            Command="{x:Bind ViewModel.ToggleModUpdateCheckerCommand}"
+                            Content="Mod Auto Update Checker:"
+                            IsChecked="{x:Bind ViewModel.IsModUpdateCheckerEnabled, Mode=OneWay}" />
+                        <TextBlock
+                            Margin="8,0,0,0"
+                            VerticalAlignment="Center"
+                            Text="{x:Bind ViewModel.ModCheckerStatus, Mode=OneWay}" />
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock VerticalAlignment="Center" Text="Next Check at: " />
+                        <TextBlock Margin="8,0,0,0" Text="{x:Bind ViewModel.NextModCheckTime, Mode=OneWay}" />
+                    </StackPanel>
+
+                    <TextBlock
+                        Margin="0,8"
+                        VerticalAlignment="Center"
+                        Text="The Mod Update Checker checks for updates on startup and periodically in the background"
+                        TextWrapping="WrapWholeWords" />
+
+                </StackPanel>
+
                 <TextBlock Style="{ThemeResource SubtitleTextBlockStyle}" Text="Folders" />
                 <StackPanel Margin="{StaticResource SmallTopBottomMargin}">
+
+
+
                     <controls:FolderSelector
                         Title="3Dmigoto Folder"
                         Margin="4,8,4,8"
