feat: JASM will now check gamebanana urls for new mod files. It does this by checking if there are any new mods since the last check. (#78)
feat: JASM will now auto detect image in mod folder, looks for images in this order 1. ".jasm_cover" 2. "preview" 3. "cover"

chore: Added easter egg because idk

chore: Reduced the number of loose files in JASM folder

--- a/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
@@ -35,6 +35,24 @@
                         <FontIcon Glyph="{x:Bind ViewModel.PinGlyph, Mode=OneWay}" />
                     </MenuFlyoutItem.Icon>
                 </MenuFlyoutItem>
+                <MenuFlyoutItem
+                    Command="{x:Bind ViewModel.CheckForUpdatesForCharacterCommand}"
+                    CommandParameter="{Binding}"
+                    IsEnabled="{x:Bind ViewModel.CanCheckForUpdates, Mode=OneWay}"
+                    Text="Check for updates">
+                    <MenuFlyoutItem.Icon>
+                        <FontIcon Glyph="&#xE777;" />
+                    </MenuFlyoutItem.Icon>
+                </MenuFlyoutItem>
+                <MenuFlyoutSeparator />
+                <MenuFlyoutItem
+                    Command="{x:Bind ViewModel.ClearNotificationsCommand}"
+                    CommandParameter="{Binding}"
+                    Text="Clear Notifications">
+                    <MenuFlyoutItem.Icon>
+                        <FontIcon Glyph="&#xE894;" />
+                    </MenuFlyoutItem.Icon>
+                </MenuFlyoutItem>
             </MenuFlyout>
         </Grid.Resources>
 
