--- a/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
@@ -413,10 +413,22 @@
                                                         <ItemsRepeater.ItemTemplate>
                                                             <DataTemplate x:DataType="notifications:ModNotification">
                                                                 <Grid Margin="4,0" VerticalAlignment="Center">
-                                                                    <FontIcon
-                                                                        VerticalAlignment="Bottom"
-                                                                        Foreground="{ThemeResource AccentTextFillColorTertiaryBrush}"
-                                                                        Glyph="{x:Bind AttentionType, Converter={StaticResource AttentionTypeToSymbolConverter}}" />
+                                                                    <Button
+                                                                        Margin="0"
+                                                                        Padding="0"
+                                                                        BorderThickness="0"
+                                                                        Click="ButtonBase_OnClick"
+                                                                        CornerRadius="0"
+                                                                        DataContext="{x:Bind}"
+                                                                        PointerEntered="NotificationButton_OnPointerEntered"
+                                                                        PointerExited="NotificationButton_OnPointerExited">
+                                                                        <Button.Content>
+                                                                            <FontIcon
+                                                                                VerticalAlignment="Bottom"
+                                                                                Foreground="{ThemeResource AccentTextFillColorTertiaryBrush}"
+                                                                                Glyph="{x:Bind AttentionType, Converter={StaticResource AttentionTypeToSymbolConverter}}" />
+                                                                        </Button.Content>
+                                                                    </Button>
                                                                 </Grid>
                                                             </DataTemplate>
                                                         </ItemsRepeater.ItemTemplate>
@@ -538,6 +550,7 @@
                                     VerticalAlignment="Center"
                                     Header="Mod Url:"
                                     IsEnabled="{x:Bind ViewModel.ModPaneVM.IsReadOnlyMode, Mode=OneWay, Converter={StaticResource BoolInverter}}"
+                                    PlaceholderText="Example URL: https://gamebanana.com/mods/117420"
                                     Text="{x:Bind ViewModel.ModPaneVM.SelectedModModel.ModUrl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
                                 <HyperlinkButton
